--- a/CodexNaturalis/src/main/resources/fxml/ColorSelection.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/ColorSelection.fxml
@@ -3,10 +3,10 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<VBox styleClass="scene" accessibleRole="LIST_VIEW" alignment="CENTER" spacing="10"
+<VBox styleClass="scene" alignment="CENTER" spacing="10"
       stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171"
       xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.ColorSelectionController">
     <padding>
@@ -17,8 +17,10 @@
             <Font name="Book Antiqua Bold Italic" size="24.0"/>
         </font>
     </Label>
-    <ListView fx:id="colorListView" accessibleRole="LIST_ITEM" prefHeight="150.0" prefWidth="580.0"
-              style="-fx-background-color: #fffeb3;"/>
+    <HBox fx:id="colorContainer" alignment="CENTER" spacing="20">
+
+    </HBox>
+    <Label fx:id="messageLabel"/>
     <Button fx:id="selectColorButton" onAction="#handleSelectColor" style="-fx-background-color: #a2ecbb;"
             text="Select Color">
         <font>
