--- a/CodexNaturalis/src/main/resources/fxml/ObjectiveCardSelection.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/ObjectiveCardSelection.fxml
@@ -8,12 +8,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.Label?>
 <VBox alignment="CENTER" spacing="10" styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.ObjectiveCardSelectionController">
-   <ImageView fitHeight="201.0" fitWidth="1012.0" pickOnBounds="true" preserveRatio="true">
-      <image>
-         <Image url="@../Images/CN_decoration10.png" />
-      </image>
-   </ImageView>
+    <ImageView fitHeight="201.0" fitWidth="1012.0" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../Images/CN_decoration10.png"/>
+    </ImageView>
     <HBox alignment="CENTER" prefHeight="289.0" prefWidth="1012.0" spacing="50" style="-fx-background-color: #f8f1c9;">
         <padding>
             <Insets bottom="20" left="20" right="20" top="20" />
@@ -33,9 +32,8 @@
             </Button>
         </VBox>
     </HBox>
-   <ImageView fitHeight="201.0" fitWidth="1012.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
-      <image>
-         <Image url="@../Images/CN_decoration10.png" />
-      </image>
-   </ImageView>
+    <Label  fx:id="messageLabel" />
+    <ImageView fitHeight="201.0" fitWidth="1012.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+        <Image url="@../Images/CN_decoration10.png"/>
+    </ImageView>
 </VBox>
