--- a/CodexNaturalis/src/main/resources/fxml/GameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GameState.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
 <AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css"
             xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="it.polimi.ingsw.gui.Controller.GameController">
@@ -14,5 +15,8 @@
     <HBox fx:id="objectiveCardsContainer" layoutX="300.0" layoutY="24.0" spacing="10"/>
     <HBox fx:id="resourceDeck" layoutX="300.0" layoutY="152.0" spacing="10"/>
     <HBox fx:id="goldenDeck" layoutX="300.0" layoutY="280.0" spacing="10"/>
-    <VBox fx:id="playerHandBox" layoutX="25.0" layoutY="469.0" spacing="10"/>
+    <VBox layoutX="25.0" layoutY="455.0" spacing="5">
+        <Button text="Show Back" onAction="#handleShowBackButton"/>
+        <VBox fx:id="playerHandBox" spacing="10"/>
+    </VBox>
 </AnchorPane>
