--- a/CodexNaturalis/src/main/resources/fxml/GetWinnerState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GetWinnerState.fxml
@@ -10,9 +10,9 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.GetWinnerController">
    <children>
-      <VBox alignment="CENTER" layoutX="82.0" layoutY="63.0" spacing="20.0">
+      <VBox alignment="CENTER" layoutX="82.0" layoutY="63.0" spacing="20.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="100.0">
          <children>
-            <HBox prefHeight="482.0" prefWidth="431.0" spacing="50.0">
+            <HBox alignment="CENTER" prefHeight="482.0" prefWidth="431.0" spacing="50.0">
                <children>
                   <ImageView fitHeight="555.0" fitWidth="443.0" pickOnBounds="true" preserveRatio="true">
                           <Image url="@../Images/Board.jpg" />
@@ -30,7 +30,7 @@
                   </VBox>
                </children>
             </HBox>
-            <Button fx:id="returnToLobbyButton" onMouseClicked="#handleReturnToLobby" mnemonicParsing="false" style="-fx-background-color: #a2ecbb;" styleClass="primary-button" text="RETURN TO LOBBY" />
+            <Button fx:id="returnToLobbyButton" mnemonicParsing="false" onMouseClicked="#handleReturnToLobby" style="-fx-background-color: #a2ecbb;" styleClass="primary-button" text="RETURN TO LOBBY" />
          </children>
       </VBox>
       <!-- Top-left Corner -->
